--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -14,6 +14,7 @@
 .name {
 	font-size: 3.4rem;
 	font-weight: 600;
+	line-height: 80px;
 	margin-bottom: 10px;
 
 	span {
@@ -35,11 +36,11 @@
 
 	a {
 		i {
-			transition: transform 0.2s;
+			@include transition(transform 0.2s);
 		}
 
 		&:hover i {
-			transform: scale(1.3);
+			@include transform(scale(1.3));
 		}
 	}
 }
