--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:        30px;
 
 $text-color:          #333;
 $background-color:    #ffffff;
-$brand-color:         #93B5C6;
+$brand-color:         #80cbc4;
 
 $grey:                #828282;
 $grey-lighten-1:      lighten($grey, 10%);
